# ice_data_extractor

./: .flake8  .gitignore  LICENSE  README.md  TODO.txt  pyproject.toml  run.ps1  run.sh  shell.nix
assets/: Rutford_DELORES_TWTT_2D_201617_500m_spaced  Rutford_DELORES_TWTT_2D_201617_500m_spaced.xml
src/: extractor.py  ice_extractor.py  ice_gui.py  ice_plotter.py  main.py
tests/: check_all.sh  test_all.sh  test_calculate_z.py  test_tile.py
