[project]
version = "0.1"
name = "IceDataExtractor"
dependencies = [
    "scipy >= 1.13.0"
]
requires-python = ">= 3.12"
readme = "README.md"
description = "Extract data from ice data radar images."
maintainers = [
  {name = "Willi Kappler", email = "grandor@gmx.de"}
]
authors = [
  {name = "Willi Kappler", email = "grandor@gmx.de"},
]
keywords = ["data", "science", "ice", "radar"]
license = {text = "MIT License"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12"
]

[project.urls]
Repository = "https://github.com/willi-kappler/ice_data_extractor"

